Tests/ShouldSucceed/FactuurDagger2.adl
CONTEXT Factuur IN ENGLISH

factuurRegel :: Factuur * Regel
regelText :: Regel * TEXT [UNI]
factuurOK :: Factuur * Factuur [PROP]

RULE "Factuur controle": factuurOK = I[Factuur] /\ -factuurRegel!((I /\ regelText;regelText~);V)
MEANING "Definitie: een factuur is ok DESDA de factuur is leeg, of elk van zijn regels bevat een text."

POPULATION factuurRegel CONTAINS [ ("Factuur1", "Regel1") ]
POPULATION regelText    CONTAINS [ ("Regel1", "Eentje") ]
POPULATION factuurOK    CONTAINS [ ("Factuur1", "Factuur1") ]

ENDCONTEXT